Fix title wrap bug

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -29,6 +29,7 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
+  white-space: nowrap;
 }
 
 .dashboard .phoneVerify {
